# ShaderEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: shader.vert  shader_descriptorSet.vert  shader_push_constant.vert
assets/shaders/compiled/: shader _descriptorSet.vert.spv  shader.vert.spv  shader_descriptorSet.vert.spv  shader_push_constant.vert.spv
scripts/: compile_shaders.bat
src/: Application.cpp  Application.h  CMakeLists.txt  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  main.cpp
src/core/: CMakeLists.txt  Core.cpp  Core.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
src/events/: CMakeLists.txt  Event.h  Inputs.cpp  Inputs.h  KeyboardEvents.h  MouseEvents.h
src/renderer/: Allocator.cpp  Allocator.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderPass.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  VkUtilities.h  temp
src/renderer/vulkan/: Buffer.cpp  Buffer.h  CMakeLists.txt  CommandBuffer.cpp  ComputePipeline.cpp  ComputePipeline.h  ComputeShader.cpp  ComputeShader.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Material.cpp  Material.h  Mesh.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  VKRenderer.cpp  VKRenderer.h
src/scene/: CMakeLists.txt  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h
src/ui/: CMakeLists.txt  UI.cpp  UI.h  Window.cpp  Window.h
src/ui/editor/: CMakeLists.txt  EditorController.cpp  EditorController.h  EditorView.cpp  EditorView.h  Viewport.cpp  Viewport.h
vma/: CMakeLists.txt
